--- a/unternehmen.html
+++ b/unternehmen.html
@@ -22,7 +22,7 @@
         <a href="index.html">Fresa</a>
       </li>
       <li>
-        <a href="unternehmen.html">Über uns</a>
+        <a href="unternehmen.html" class="active">Über uns</a>
       </li>
       <li>
         <a href="produkt.html">Die Speisekammer</a>
@@ -31,7 +31,7 @@
         <a href="pricing.html">Preise</a>
       </li>
       <li>
-        <a href="index.html#kontakt">Kontakt</a>
+        <a href="contact.html">Kontakt</a>
       </li>
     </ul>
   </nav>
@@ -41,20 +41,20 @@
       <div class="overlay">
       </div>
       <h2 class="sectionHeading">Was macht Fresa?</h2>
-
     </div>
   </div>
   <div class="content">
-    <p>
-      Fresa ist ein Unternehmen, dass den Liefer- und Bestellprozess von regionalen Erzeugnissen vereinfacht. Das System richtet
-      sich an Menschen, die bereits regionale Lebensmittel beziehen, oder dies in Zukunft tun möchten. Fresa integriert sich
-      in den Alltag der Menschen und versorgt diese mit Informationen über regionalen Lebensmitteln. Bestellungen werden
-      in personalisierten Boxen an die Fresa Speisekammern geliefert. Hierbei beträgt die Entfehrnung vom Wohnort des Kunden
-      zu der nächstmöglichen Speisekammer maximal fünf Gehminuten.
-    </p>
-
     <div class="section">
-      <h2 class="heading">Fresa & Regional</h2>
+      <p>
+        Fresa ist ein Unternehmen, dass den Liefer- und Bestellprozess von regionalen Erzeugnissen vereinfacht. Das System richtet
+        sich an Menschen, die bereits regionale Lebensmittel beziehen, oder dies in Zukunft tun möchten. Fresa integriert
+        sich in den Alltag der Menschen und versorgt diese mit Informationen über regionalen Lebensmitteln. Bestellungen
+        werden in personalisierten Boxen an die Fresa Speisekammern geliefert. Hierbei beträgt die Entfehrnung vom Wohnort
+        des Kunden zu der nächstmöglichen Speisekammer maximal fünf Gehminuten.
+      </p>
+    </div>
+    <div class="section">
+      <h2 class="heading">Fresa &hearts; Regional</h2>
       <p>Die Verbraucherstudie „Wie steht der Verbraucher heutzutage zur Regionalität?" aus dem Jahr 2013 beschäftigte sich
         intensiv mit der Entwicklung der Begriff e Regionalität und Bio in unserer Gesellschaft so wie ihrer Bedeutung in
         eben dieser. „Im Vergleich zu Bio wird Regionalität in der Zukunft immer wichtiger." Der Begriff Regionalität gewinnt
@@ -68,22 +68,19 @@
     <div class="section parts">
       <h3 class="part-title">Fresa</h3>
       <div class="part-block">
-        <p>Regionale Waren holt Fresa direkt beim Erzeuger ab und liefert sie in das stadtnah gelegene Mikrodepot. Der Nutzerkann
+        <p class="part">Regionale Waren holt Fresa direkt beim Erzeuger ab und liefert sie in das stadtnah gelegene Zwischenlager. Der Nutzerkann
           die Produkte von Fresa entweder selbst abholen oder sich in der Fresa Clipbox liefern lassen.
         </p>
-        <img src="./Pics/mal.PNG" alt="">
+        <img src="./Pics/mal.PNG" alt="" class="part">
       </div>
     </div>
 
-
-
-
     <div class="section parts">
-      <h3 class="part-title">Fresa Mikrodepot</h3>
+      <h3 class="part-title">Fresa Zwischenlager</h3>
 
       <div class="part-block">
         <img src="./Pics/FresaMikrodepot.png" alt="" class="part">
-        <p class="part">Das Fresa Mikrodepot hat drei Funktionen: klassischer Lagerraum mit Kühlung, marktähnlicher Verkauf mit Probiermöglichkeit
+        <p class="part">Das Fresa Zwischenlager hat drei Funktionen: klassischer Lagerraum mit Kühlung, marktähnlicher Verkauf mit Probiermöglichkeit
           und offene Küche mit Sitzbereich. Der klassische Lagerraum dient zur Kommissionierung der Abokisten, enthält eine
           kleine Packstraße, und bietet den Erzeugern die Möglichkeit Waren einfach direkt zur Vermarktung weitergeben zu
           können.
@@ -119,13 +116,19 @@
     <div class="section parts">
       <h3 class="part-title">Was gibt es in der Region?</h3>
       <div class="part-block">
-        <p class="part">Das Mikrodepot soll den Nutzern die Möglichkeit geben, die Waren und das regionale Konzept erfühlbar zu machen. Im
-          Marktbereich des Mikrodepots werden die Waren nach der Entfernung ihres Produktionsortes sortiert zum Verkauf aufgebaut,
-          ähnlich wie bei einem Marktstand oder einer Markthalle.
+        <p class="part">Das Zwischenlager soll den Nutzern die Möglichkeit geben, die Waren und das regionale Konzept erfühlbar zu machen.
+          Im Marktbereich des Zwischenlagers werden die Waren nach der Entfernung ihres Produktionsortes sortiert zum Verkauf
+          aufgebaut, ähnlich wie bei einem Marktstand oder einer Markthalle.
         </p>
       </div>
     </div>
+    <div class="section">
 
+      <h2 class="heading continue">
+        <a href="produkt.html">Wo kann ich meine Bestellung abholen?</a>
+      </h2>
+
+    </div>
 
 </body>
 
