--- a/produkt.html
+++ b/produkt.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-  <title>Fresa</title>
+  <title>Fresa | Die Speisekammer</title>
   <meta charset="utf-8" />
   <link href="style.css" rel="stylesheet">
   <script type='text/javascript' src="jquery.js"></script>
@@ -25,13 +25,13 @@
         <a href="unternehmen.html">Über uns</a>
       </li>
       <li>
-        <a href="produkt.html">Die Speisekammer</a>
+        <a href="produkt.html" class="active">Die Speisekammer</a>
       </li>
       <li>
         <a href="pricing.html">Preise</a>
       </li>
       <li>
-        <a href="index.html#kontakt">Kontakt</a>
+        <a href="contact.html">Kontakt</a>
       </li>
     </ul>
   </nav>
@@ -44,49 +44,74 @@
     </div>
   </div>
   <div class="content">
-    <div class="Material_image1">
-    </div>
-    <div class="Material_image2">
+    <div class="section">
+      <p>Wenn du etwas bei uns bestllst, dann werden all deine Lieferungen in eine Speisekammer gelifert. Diese befindet sich
+        in kurzer Gehweite zu deinem Zuhause in einem geschäft, welches längere Öffnungszeiten hat als gewöhnliche Geschäfte.</p>
+
     </div>
 
-  </div>
-
-  <div class="Technik_image">
-    <div class="overlay6">
-    </div>
-    <div class="section SoFunktionierts content">
-      <h2 class="heading Technik">So funktionierts</h2>
-    </div>
-  </div>
-  <div class="content">
-    <h2 class="heading WorksLike">Workslike Prototyp</h2>
-    <div class="TechnikVideo">
-      <div class="video centered-content">
-        <a class="circle-canvas close-video" href="javascript:void(0)" id="video-close" rel="tooltipTOP" data-original-title="close"></a>
-        <video width="70%" height="80%" id="video" class="video" controls>
-          <source src="technikVideo.mp4">
-        </video>
+    <div class="section">
+      <h2 class="heading Looks_like">So sieht die Speisekammer aus</h2>
+      <p>Der erste Lookslike Prototyp von Fresa war darauf ausgreichtet eine erste grobe Richtung vorzugeben wie das Endprodukt
+        unserer Speisekammer später aussehen könnte. Zeil war es eine Materiallinie zu finden, welche sich gut anfühlt und
+        mit der Technik harmoniert.</p>
+      <div class="row material">
+        <img src="./Pics/material_jute.jpg" alt="">
+        <img src="./Pics/material_holz.jpg" alt="">
+        <img src="./Pics/material_plastik.jpg" alt="">
+        <img src="./Pics/material_styro.jpg" alt="">
+      </div>
+      <p>Materialien die wir bei Fresa einsetzen sind immer bewusst gewählt und haben alle einen Zweck. Jute für unsere Taschen,
+        Lebenmittelechtes Plastik für die Kisten und natürlich Seekiefernholz für unsere Speisekammern</p>
+      <div class="full-width">
+        <img src="./Pics/material_jute.jpg" alt="">
       </div>
     </div>
 
     <div class="section">
-      <h2 class="heading Looks_like">Lookslike Prototyp</h2>
-      <p>Der direkte Kontakt vom Verkäufer zum Kunden, das ist es, was Menschen schätzen, wenn es um regionale Lebensmittel
-        geht. Bei der Begrüßung angefangen, wird der Kaufprozess von mehreren Ereignissen begleitet. Diese führen dazu, dass
-        der Kunde einen Bezug zum Produkt und zum Erzeuger entwickelt. Hierzu gehören aber auch die Ware anfassen, daran
-        riechen und das Produkt mit allen Sinnen erleben. Das alles schafft die nötige Vertrauensbasis und ist wesentlicher
-        Bestandteil beim Kauf von regionalen Lebensmitteln. Menschen, die bewusst regionale Lebensmittel kaufen, möchten
-        auf diese Dinge nicht verzichten. Umfragen auf städtischen Wochenmärkten bestätigten dies. Die eben genannten Faktoren
-        fallen im Online Lebensmittelhandel weg und sind so gut wie nicht zu ersetzen. Darum ist es notwendig, einen Online
-        Markt für regionale Lebensmittel mit einer Anlaufstelle zu kombinieren, die dazu dient, dem Kunden einen Bezug zum
-        Produkt sowie zum Erzeuger zu ermöglichen.
-      </p>
-      <div class="Lookslike_image1">
+      <h2 class="heading Looks_like">So funktioniert es</h2>
+
+      <div class="usp">
+        <div class="row">
+          <div class="block">
+            <div class="feat-img">
+              <img src="./Pics/Uhr2.jpg" alt="">
+            </div>
+            <p class="usp-title">LoRa WAN</p>
+            <p class="text">Durch das IoT Netzwerk LoRa WAN werden die Speisekammern mit den Fresa Servern verbunden und melden wenn die
+              Bestllung geliefert oder Du eine leere Kiste in die Speisekammer gestellt hast
+            </p>
+          </div>
+          <div class="block">
+            <div class="feat-img">
+              <img src="./Pics/TrekkerTeller2.jpg" alt="">
+            </div>
+            <p class="usp-title">MQTT</p>
+            <p class="text">Damit wir bei Fresa immer wissen in welchem Zustand sich jede Speisekammer befindet, werden kleine Nachrichten
+              über das IoT Protokoll MQTT an einen Server gesendet der diese weiter verarbeitet und so eine Kommunkation
+              unter einander ermöglicht.
+            </p>
+          </div>
+        </div>
       </div>
-      <div class="Lookslike_image2">
+      <div class="TechnikVideo">
+        <div class="video centered-content">
+          <video width="70%" height="80%" id="video" class="video" controls>
+            <source src="technikVideo.mp4">
+          </video>
+        </div>
       </div>
-      <div class="Lookslike_image3">
+      <div class="section">
+        <iframe src="https://fresa-delivery.herokuapp.com" frameborder="0"></iframe>
       </div>
+    </div>
+
+    <div class="section">
+
+      <h2 class="heading continue">
+        <a href="pricing.html">Wieviel kostet Fresa?</a>
+      </h2>
+
     </div>
   </div>
 
