CSS fine-tuning

--- a/produkt.html
+++ b/produkt.html
@@ -102,6 +102,8 @@
         </div>
       </div>
       <div class="section">
+        <h2 class="heading Unsere_Materialien">Wer steht dahinter?</h2>
+
         <iframe src="https://fresa-delivery.herokuapp.com" frameborder="0"></iframe>
       </div>
     </div>
