--- a/contact.html
+++ b/contact.html
@@ -45,29 +45,30 @@
     </div>
   </div>
   <div class="content">
-    <div class="section" id="kontakt">
+    <div class="section contact" id="kontakt">
+      <p>Hinter jedem guten Produkt, steht immer ein gutes Team. Hannah, Marco, Jan und Sabine haben sich dieses Konzeot ausgedacht
+        und werden es umsetzen. </p>
       <h2 class="heading">Kontakt</h2>
       <div class="row">
         <div class="column">
-          <img src="./Pics/marco.png" alt="Marco" style="width:100%" "height:100%">
-          <p>Marco Frumento marco.frumento@fresa.de
-          </p>
+          <img src="./Pics/marco.png" alt="Marco">
+          <h3>Marco Frumento</h3>
+          <p>marco.frumento@fresa.biz</p>
         </div>
         <div class="column">
-          <img src="./Pics/hannah.png" alt="Hannah" style="width:100%" "height:100%">
-          <p>Sabine Reitmaier sabine.reitmaier@fresa.de
-          </p>
+          <img src="./Pics/hannah.png" alt="Hannah">
+          <h3>Sabine Reitmaier</h3>
+          <p>sabine.reitmaier@fresa.biz</p>
         </div>
         <div class="column">
-          <img src="./Pics/hannah.png" alt="Sabine" style="width:100%" "height:100%">
-          <p>Jan Meininghaus jan.meininghaus@fresa.de
-          </p>
+          <img src="./Pics/hannah.png" alt="Sabine">
+          <h3>Jan Meininghaus</h3>
+          <p>jan.meininghaus@fresa.biz</p>
         </div>
         <div class="column">
-          <img src="./Pics/jan.png" alt="Jan" style="width:100%" "height:100%">
-          <p>Hannah Ackermann hannah.ackermann@fresa.de
-          </p>
-
+          <img src="./Pics/jan.png" alt="Jan">
+          <h3>Hannah Ackermann</h3>
+          <p>hannah.ackermann@fresa.biz</p>
           <script type='text/javascript' src="jquery.js"></script>
         </div>
       </div>
