changed text + shortend

--- a/indeX.html
+++ b/indeX.html
@@ -125,19 +125,16 @@
         <div class="img-block left">
           <img src="./Pics/karotte.jpg" alt="Krumme Karotte">
         </div>
-        <p>Auf die Frage, wer oder was das Interesse an Bio-Lebensmitteln gestärkt und geweckt hat, antworteten ganze 65% der
-          Befragten in einer Studie des Bundesministerium für Ernährung und Landwirtschaft, dass es von privaten Kontakten
-          stammt, welche ebenfalls Nutzer/-innen von Bioprodukten sind. Als zweithäufigste Aussage stellte sich die ärztliche
-          Empfehlung und eigene Initiative als Anregung heraus, Bio-Lebensmittel zu verzehren. Andere relativ häufig genannte
-          Beweggründe waren etwa reine Neugier oder neue Produkte im gewohnten Supermarkt Sortiment auszuprobieren, sowie
-          Werbung durch Bioläden und Beratung in diesem oder direkt vom Erzeuger.
+        <p>Die größten Vorteile in Bio Lebensmitteln sehen Nutzer darin, dass der Geschmack und die Qualität überzeugen. Fresa jedoch kombiniert dieses
+          Erlebnis damit, dass die Produkte zusätzlich aus der unmittelbaren Umgebung stammen. Vor allem bei Obst, Gemüse, Fleisch und Eiern wird viel Wert darauf
+          gelegt, dass die Ware keine weiten Wege hinter sich gelegt hat und so frisch wie nur möglich verzehrt werden kann.
         </p>
       </div>
     </div>
     <div class="section">
       <h2 class="heading">Wir lieben unsere Kunden</h2>
       <div class="col-2">
-        <p>Fresa versucht tagtäglich die Wünsche unserer Kunden zu erfüllen. Dafür ist es wichtig stetig in Kontakt mit ihnen
+        <p>Wir, das Team hinter Fresa, versuchen tagtäglich die Wünsche unserer Kunden zu erfüllen. Dafür ist es wichtig stetig in Kontakt mit ihnen
           zu stehen und Anregrungen und mögliche Beanstandungen zu verbessern. Fresa versucht, das Vertrauen der Kunden zu
           gewinnen und stellt dem Kunden Zwischenlager zur Verfügung, in denen sie sich die Ware anschauen könne bevor man
           bestellt.
