--- a/produkt.html
+++ b/produkt.html
@@ -45,8 +45,8 @@
   </div>
   <div class="content">
     <div class="section">
-      <p>Wenn du etwas bei uns bestllst, dann werden all deine Lieferungen in eine Speisekammer gelifert. Diese befindet sich
-        in kurzer Gehweite zu deinem Zuhause in einem geschäft, welches längere Öffnungszeiten hat als gewöhnliche Geschäfte.</p>
+      <p>Wenn du etwas bei uns bestellst, dann werden all deine Lieferungen in eine Speisekammer geliefert. Diese befindet sich
+        in wenigen Gehminuten von deinem Zuhause entfernt in einem Geschäft, mit langen Öffnungszeiten.</p>
 
     </div>
 
@@ -79,7 +79,7 @@
             </div>
             <p class="usp-title">LoRa WAN</p>
             <p class="text">Durch das IoT Netzwerk LoRa WAN werden die Speisekammern mit den Fresa Servern verbunden und melden wenn die
-              Bestllung geliefert oder Du eine leere Kiste in die Speisekammer gestellt hast
+              Bestellung geliefert oder Du eine leere Kiste in die Speisekammer gestellt hast
             </p>
           </div>
           <div class="block">
