--- a/unternehmen.html
+++ b/unternehmen.html
@@ -55,9 +55,7 @@
     </div>
     <div class="section">
       <h2 class="heading">Fresa &hearts; Regional</h2>
-      <p>Die Verbraucherstudie „Wie steht der Verbraucher heutzutage zur Regionalität?" aus dem Jahr 2013 beschäftigte sich
-        intensiv mit der Entwicklung der Begriff e Regionalität und Bio in unserer Gesellschaft so wie ihrer Bedeutung in
-        eben dieser. „Im Vergleich zu Bio wird Regionalität in der Zukunft immer wichtiger." Der Begriff Regionalität gewinnt
+      <p>Im Vergleich zu Bio wird Regionalität in der Zukunft immer wichtiger. Der Begriff Regionalität gewinnt
         immer mehr an Aufmerksamkeit. Die Regale unserer Supermärkte geben häufi ger Platz für Produkte, die mit der Aufschrift
         „regional" werben. Wie steht der Verbraucher heutzutage zur Regionalität? Die Händler haben den Trend schon lange
         entdeckt und hoff en durch regional erzeugten Produkte mehr Kunden an ihre Märkte zu binden und den Kauf in gewisser
@@ -116,7 +114,7 @@
     <div class="section parts">
       <h3 class="part-title">Was gibt es in der Region?</h3>
       <div class="part-block">
-        <p class="part">Das Zwischenlager soll den Nutzern die Möglichkeit geben, die Waren und das regionale Konzept erfühlbar zu machen.
+        <p class="part">Das Zwischenlager gibt den Nutzern die Möglichkeit, die Waren und das regionale Konzept erfühlbar zu machen.
           Im Marktbereich des Zwischenlagers werden die Waren nach der Entfernung ihres Produktionsortes sortiert zum Verkauf
           aufgebaut, ähnlich wie bei einem Marktstand oder einer Markthalle.
         </p>
