--- a/indeX.html
+++ b/indeX.html
@@ -40,9 +40,9 @@
   <div class="intro_image">
     <div id="slideshow">
       <div class="overlay"></div>
-      <img src="./Pics/saison.JPG">
-      <img src="./Pics/hühner.jpg">
-      <img src="./Pics/feld.jpg">
+      <img src="./Pics/comp/saison.JPG">
+      <img src="./Pics/comp/hühner.jpg">
+      <img src="./Pics/comp/feld.jpg">
     </div>
 
     <h2 class="SFD">Sustainable Fresh Delivery</h2>
