--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
     </ul>
   </nav>
   <div class="intro_image">
-    <div class="sectionHeader pricing">
+    <div class="sectionHeader contact">
       <div class="overlay5">
       </div>
       <h2 class="heading Unsere_Materialien">Wer steht dahinter?</h2>
@@ -46,27 +46,27 @@
   </div>
   <div class="content">
     <div class="section contact" id="kontakt">
-      <p>Hinter jedem guten Produkt, steht immer ein gutes Team. Hannah, Marco, Jan und Sabine haben sich dieses Konzeot ausgedacht
-        und werden es umsetzen. </p>
-      <h2 class="heading">Kontakt</h2>
+      <p>Hinter jedem guten Produkt, steht immer ein gutes Team.
+        <br>Hannah, Marco, Jan und Sabine haben sich dieses Konzept ausgedacht und werden es umsetzen. </p>
+      <h2 class="heading">Wir sind Fresa</h2>
       <div class="row">
         <div class="column">
-          <img src="./Pics/marco.png" alt="Marco">
+          <img src="./Pics/marco.JPG" alt="Marco">
           <h3>Marco Frumento</h3>
           <p>marco.frumento@fresa.biz</p>
         </div>
         <div class="column">
-          <img src="./Pics/hannah.png" alt="Hannah">
+          <img src="./Pics/sabine.JPG" alt="Hannah">
           <h3>Sabine Reitmaier</h3>
           <p>sabine.reitmaier@fresa.biz</p>
         </div>
         <div class="column">
-          <img src="./Pics/hannah.png" alt="Sabine">
+          <img src="./Pics/jan.JPG" alt="Sabine">
           <h3>Jan Meininghaus</h3>
           <p>jan.meininghaus@fresa.biz</p>
         </div>
         <div class="column">
-          <img src="./Pics/jan.png" alt="Jan">
+          <img src="./Pics/hannah.JPG" alt="Jan">
           <h3>Hannah Ackermann</h3>
           <p>hannah.ackermann@fresa.biz</p>
           <script type='text/javascript' src="jquery.js"></script>
