--- a/indeX.html
+++ b/indeX.html
@@ -58,7 +58,7 @@
 
     <div class="Trailer" id="vorschau">
       <div class="video centered-content">
-        <video id="video" class="video" controls>
+        <video id="video" class="video" controls poster="./Pics/Vimeo_Banner.jpg">
           <source src="./Pics/trailer.mp4">
         </video>
       </div>
@@ -91,14 +91,14 @@
         <div class="row">
           <div class="block">
             <div class="feat-img">
-              <img src="./Pics/Karte.jpg" alt="">
+              <img src="./Pics/lecker.jpg" alt="">
             </div>
             <p class="usp-title">lecker und frisch</p>
           </div>
 
           <div class="block">
             <div class="feat-img">
-              <img src="./Pics/Karte.jpg" alt="">
+              <img src="./Pics/ackerHerz.jpg" alt="">
             </div>
             <p class="usp-title">Fairer Handel</p>
           </div>
@@ -111,11 +111,7 @@
           </div>
         </div>
       </div>
-
-
     </div>
-
-
   </div>
 
   <div class="content">
@@ -125,22 +121,23 @@
         <div class="img-block left">
           <img src="./Pics/karotte.jpg" alt="Krumme Karotte">
         </div>
-        <p>Die größten Vorteile in Bio Lebensmitteln sehen Nutzer darin, dass der Geschmack und die Qualität überzeugen. Fresa jedoch kombiniert dieses
-          Erlebnis damit, dass die Produkte zusätzlich aus der unmittelbaren Umgebung stammen. Vor allem bei Obst, Gemüse, Fleisch und Eiern wird viel Wert darauf
-          gelegt, dass die Ware keine weiten Wege hinter sich gelegt hat und so frisch wie nur möglich verzehrt werden kann.
+        <p>Die größten Vorteile in Bio Lebensmitteln sehen Nutzer darin, dass der Geschmack und die Qualität überzeugen. Fresa
+          jedoch kombiniert dieses Erlebnis damit, dass die Produkte zusätzlich aus der unmittelbaren Umgebung stammen. Vor
+          allem bei Obst, Gemüse, Fleisch und Eiern wird viel Wert darauf gelegt, dass die Ware keine weiten Wege hinter
+          sich gelegt hat und so frisch wie nur möglich verzehrt werden kann.
         </p>
       </div>
     </div>
     <div class="section">
       <h2 class="heading">Wir lieben unsere Kunden</h2>
       <div class="col-2">
-        <p>Wir, das Team hinter Fresa, versuchen tagtäglich die Wünsche unserer Kunden zu erfüllen. Dafür ist es wichtig stetig in Kontakt mit ihnen
-          zu stehen und Anregrungen und mögliche Beanstandungen zu verbessern. Fresa versucht, das Vertrauen der Kunden zu
-          gewinnen und stellt dem Kunden Zwischenlager zur Verfügung, in denen sie sich die Ware anschauen könne bevor man
-          bestellt.
+        <p>Wir, das Team hinter Fresa, versuchen tagtäglich die Wünsche unserer Kunden zu erfüllen. Dafür ist es wichtig stetig
+          in Kontakt mit ihnen zu stehen und Anregrungen und mögliche Beanstandungen zu verbessern. Fresa versucht, das Vertrauen
+          der Kunden zu gewinnen und stellt dem Kunden Zwischenlager zur Verfügung, in denen sie sich die Ware anschauen
+          könne bevor man bestellt.
         </p>
         <div class="img-block right">
-          <img src="http:///placekitten.com/600/400" alt="">
+          <img src="./Pics/kunde.jpg" alt="">
         </div>
       </div>
     </div>
