--- a/produkt.html
+++ b/produkt.html
@@ -47,7 +47,6 @@
     <div class="section">
       <p>Wenn du etwas bei uns bestellst, dann werden all deine Lieferungen in eine Speisekammer geliefert. Diese befindet sich
         in wenigen Gehminuten von deinem Zuhause entfernt in einem Geschäft, mit langen Öffnungszeiten.</p>
-
     </div>
 
     <div class="section">
@@ -64,20 +63,20 @@
       <p>Materialien die wir bei Fresa einsetzen sind immer bewusst gewählt und haben alle einen Zweck. Jute für unsere Taschen,
         Lebenmittelechtes Plastik für die Kisten und natürlich Seekiefernholz für unsere Speisekammern</p>
       <div class="full-width">
-        <img src="./Pics/material_jute.jpg" alt="">
+        <img src="./Pics/reader.jpg" alt="">
       </div>
     </div>
 
     <div class="section">
       <h2 class="heading Looks_like">So funktioniert es</h2>
 
-      <div class="usp">
+      <div class="tech">
         <div class="row">
           <div class="block">
             <div class="feat-img">
               <img src="./Pics/Uhr2.jpg" alt="">
             </div>
-            <p class="usp-title">LoRa WAN</p>
+            <p class="tech-title">LoRa WAN</p>
             <p class="text">Durch das IoT Netzwerk LoRa WAN werden die Speisekammern mit den Fresa Servern verbunden und melden wenn die
               Bestellung geliefert oder Du eine leere Kiste in die Speisekammer gestellt hast
             </p>
@@ -86,7 +85,7 @@
             <div class="feat-img">
               <img src="./Pics/TrekkerTeller2.jpg" alt="">
             </div>
-            <p class="usp-title">MQTT</p>
+            <p class="tech-title">MQTT</p>
             <p class="text">Damit wir bei Fresa immer wissen in welchem Zustand sich jede Speisekammer befindet, werden kleine Nachrichten
               über das IoT Protokoll MQTT an einen Server gesendet der diese weiter verarbeitet und so eine Kommunkation
               unter einander ermöglicht.
