--- a/unternehmen.html
+++ b/unternehmen.html
@@ -55,13 +55,14 @@
     </div>
     <div class="section">
       <h2 class="heading">Fresa &hearts; Regional</h2>
-      <p>Im Vergleich zu Bio wird Regionalität in der Zukunft immer wichtiger. Der Begriff Regionalität gewinnt
-        immer mehr an Aufmerksamkeit. Die Regale unserer Supermärkte geben häufi ger Platz für Produkte, die mit der Aufschrift
-        „regional" werben. Wie steht der Verbraucher heutzutage zur Regionalität? Die Händler haben den Trend schon lange
-        entdeckt und hoff en durch regional erzeugten Produkte mehr Kunden an ihre Märkte zu binden und den Kauf in gewisser
-        Weise zu emotionalisieren.</p>
+      <p>Im Vergleich zu Bio wird Regionalität in der Zukunft immer wichtiger. Der Begriff Regionalität gewinnt immer mehr an
+        Aufmerksamkeit. Die Regale unserer Supermärkte geben häufi ger Platz für Produkte, die mit der Aufschrift „regional"
+        werben. Wie steht der Verbraucher heutzutage zur Regionalität? Die Händler haben den Trend schon lange entdeckt und
+        hoff en durch regional erzeugten Produkte mehr Kunden an ihre Märkte zu binden und den Kauf in gewisser Weise zu
+        emotionalisieren.
+      </p>
     </div>
-    <h2 class="heading FresaBestandteile">Fresa Bestandteile</h2>
+    <h2 class="heading FresaBestandteile">Woraus besteht Fresa?</h2>
 
     <div class="section parts">
       <h3 class="part-title">Fresa</h3>
@@ -87,37 +88,50 @@
     </div>
 
     <div class="section parts">
-      <h3 class="part-title">Erzeugernahes Vermarktungsprinzip</h3>
+      <h3 class="part-title">Fresa Chip</h3>
       <div class="part-block">
-        <p class="part">Fresa vermarktet die Produkte der Erzeuger, erwirtschaftet aber deutlich weniger Gewinn beim Einkauf der Waren als
-          ein marktüblicher Händler, wie es zum Beispiel bei einem Verkauf an einen Großhändler oder eine Handelskette gegeben
-          wäre. Fresa und die Erzeuger sind zwar unterschiedliche Firmen, Fresa unterstützt durch seine kleinen Gewinnmargen
-          beim Wareneinkauf aber den Erzeuger.
+        <p class="part">Damit jeder Kunde Zugang zu den Speisekammern hat, bekommt man einen Fresa Chip. Dieser ist mit einem RFID Transmitter
+          ausgestattet, der die Kundennummer an die Speisekammer überträgt.
         </p>
+        <img src="./Pics/chip.jpg" alt="" class="part">
       </div>
     </div>
 
-    <div class="section parts">
-      <h3 class="part-title">Krummes Gemüse</h3>
-      <div class="part-block">
-        <p class="part">Fresa agiert erzeugernah: im Geschäftsmodell von Fresa ist ein neuer Absatzmarkt für krumm gewachsene Produkte, wie
-          es etwa beim Anbau von Möhren, Gurken, Kohl, Zucchini oder Spargel oft vorkommt, einkalkuliert. Im gängigen Großhandel
-          finden Erzeugnisse, die außerhalb einer früher EU-genormten, mittlerweile handelsinternen, normierten Klassifizierung
-          und Regelung gewachsen sind, kaum Absatz und müssen vom Erzeuger verfüttert oder vernichtet werden. Fresa bietet
-          den Erzeugern an, diese Waren anzukaufen. Um den Nutzern die Waren verständlich zu machen, werden sie als Solidarprodukte
-          in Kombination mit der Unterstützung eines gemeinnützigen Projekts verkauft.
-        </p>
-      </div>
+    <div class="section">
+      <h2 class="heading green">Was wollen wir erreichen?</h2>
     </div>
+    <div class="row">
+      <div class="section parts sub">
+        <h3 class="part-title">Erzeugernahes Vermarktungsprinzip</h3>
+        <div class="part-block">
+          <p class="part">Fresa vermarktet die Produkte der Erzeuger, erwirtschaftet aber deutlich weniger Gewinn beim Einkauf der Waren
+            als ein marktüblicher Händler, wie es zum Beispiel bei einem Verkauf an einen Großhändler oder eine Handelskette
+            gegeben wäre. Fresa und die Erzeuger sind zwar unterschiedliche Firmen, Fresa unterstützt durch seine kleinen
+            Gewinnmargen beim Wareneinkauf aber den Erzeuger.
+          </p>
+        </div>
+      </div>
+
+      <div class="section parts sub">
+        <h3 class="part-title">Krummes Gemüse ist auch schön</h3>
+        <div class="part-block">
+          <p class="part">Fresa agiert erzeugernah: im Geschäftsmodell von Fresa ist ein neuer Absatzmarkt für krumm gewachsene Produkte,
+            wie es etwa beim Anbau von Möhren, Gurken, Kohl, Zucchini oder Spargel oft vorkommt, einkalkuliert. Um den Nutzern
+            die Waren verständlich zu machen, werden sie als Solidarprodukte in Kombination mit der Unterstützung eines gemeinnützigen
+            Projekts verkauft.
+          </p>
+        </div>
+      </div>
 
 
-    <div class="section parts">
-      <h3 class="part-title">Was gibt es in der Region?</h3>
-      <div class="part-block">
-        <p class="part">Das Zwischenlager gibt den Nutzern die Möglichkeit, die Waren und das regionale Konzept erfühlbar zu machen.
-          Im Marktbereich des Zwischenlagers werden die Waren nach der Entfernung ihres Produktionsortes sortiert zum Verkauf
-          aufgebaut, ähnlich wie bei einem Marktstand oder einer Markthalle.
-        </p>
+      <div class="section parts sub">
+        <h3 class="part-title">Was gibt es in der Region?</h3>
+        <div class="part-block">
+          <p class="part">Das Zwischenlager gibt den Nutzern die Möglichkeit, die Waren und das regionale Konzept erfühlbar zu machen. Im
+            Marktbereich des Zwischenlagers werden die Waren nach der Entfernung ihres Produktionsortes sortiert zum Verkauf
+            aufgebaut, ähnlich wie bei einem Marktstand oder einer Markthalle.
+          </p>
+        </div>
       </div>
     </div>
     <div class="section">
