corrected spelling mistakes

--- a/pricing.html
+++ b/pricing.html
@@ -46,7 +46,7 @@
   <div class="content">
     <div class="section">
       <p>Bei Fresa sind die Preise darauf angepasst, wie groß der Bedarf der Personen im Haushalt ist. Du bekommst jeden Monat
-        ein vorbestimmtes Monatsvolumen in kg an Obst und Gemüse, welches bei jeder bestellung schrumpft. </br> Wenn Du mal
+        ein vorbestimmtes Monatsvolumen in kg an Obst und Gemüse, welches bei jeder Bestellung schrumpft. </br> Wenn du mal
         mehr benötigst, bezahlst du einen festgelegten Kilopreis.</p>
       <div class="price-gen">
         <div class="persons">
