--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
           <p>jan.meininghaus@fresa.biz</p>
         </div>
         <div class="column">
-          <img src="./Pics/hannah.JPG" alt="Jan">
+          <img src="./Pics/hannah.jpg" alt="Jan">
           <h3>Hannah Ackermann</h3>
           <p>hannah.ackermann@fresa.biz</p>
           <script type='text/javascript' src="jquery.js"></script>
