Videos added, LoRa, MQTT added

--- a/produkt.html
+++ b/produkt.html
@@ -74,7 +74,7 @@
         <div class="row">
           <div class="block">
             <div class="feat-img">
-              <img src="./Pics/Uhr2.jpg" alt="">
+              <img src="./Pics/lora.jpg" alt="">
             </div>
             <p class="tech-title">LoRa WAN</p>
             <p class="text">Durch das IoT Netzwerk LoRa WAN werden die Speisekammern mit den Fresa Servern verbunden und melden wenn die
@@ -83,7 +83,7 @@
           </div>
           <div class="block">
             <div class="feat-img">
-              <img src="./Pics/TrekkerTeller2.jpg" alt="">
+              <img src="./Pics/mqtt.jpg" alt="">
             </div>
             <p class="tech-title">MQTT</p>
             <p class="text">Damit wir bei Fresa immer wissen in welchem Zustand sich jede Speisekammer befindet, werden kleine Nachrichten
@@ -96,7 +96,7 @@
       <div class="TechnikVideo">
         <div class="video centered-content">
           <video width="70%" height="80%" id="video" class="video" controls>
-            <source src="technikVideo.mp4">
+            <source src="./Pics/180610_Fresa-Protoype-Trailer_Team-5.mp4">
           </video>
         </div>
       </div>
